--- a/style.css
+++ b/style.css
@@ -30,18 +30,11 @@ a {
 header {
   color: white;
   text-align: center;
+  margin-top: 5em !important;
 }
 
 header h1 {
   margin: 0;
-}
-
-#page {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
 }
 
 a:hover {
