feat: add friends

--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -122,3 +122,35 @@ body {
   color: #212121;
   border-bottom-right-radius: 0.1em;
 }
+
+.person {
+  display: flex;
+  align-items: center;
+  padding: 0.5em;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  cursor: pointer;
+}
+
+.person > div:first-of-type {
+  margin-right: 0.5em;
+}
+
+.person img {
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.person p {
+  margin: 0;
+}
+
+.person p:first-of-type {
+  font-size: 1.2em;
+}
+
+.person p:last-of-type {
+  font-size: 0.8em;
+  margin-top: 0.2em;
+}
