--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -154,3 +154,21 @@ body {
   font-size: 0.8em;
   margin-top: 0.2em;
 }
+
+#flashlight {
+  background: #fff;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+
+#flashlight i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 4em;
+  transform: translate(-50%, -50%);
+}
