--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -62,6 +62,10 @@ body.flashlight #watch {
   border-bottom-right-radius: 0.3em;
 }
 
+#mainbutton:active {
+  right: 3px;
+}
+
 #status, #backbar {
   display: flex;
   padding: 0em 0.5em;
@@ -159,7 +163,7 @@ body.flashlight #watch {
   /* border-bottom-right-radius: 0.1em; */
 }
 
-.person {
+.item {
   display: flex;
   align-items: center;
   padding: 0.5em;
@@ -213,4 +217,38 @@ body.flashlight #watch {
   width: 100%;
   display: flex;
   justify-content: space-between;
+}
+
+.category i {
+  font-size: 1.6em;
+  width: 1.5em;
+  text-align: center;
+}
+
+.category p {
+  margin: 0
+}
+
+.recommended {
+  color: #0fbcf9;
+}
+
+.favourite {
+  color: #fff200;
+}
+
+.restaurant {
+  color: #bdc3c7;
+}
+
+.park {
+  color: #2ecc71;
+}
+
+.monument {
+  color: #ffeaa7;
+}
+
+.market {
+  color: #fc5c65;
 }
