feat: add coisas

--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -256,3 +256,36 @@ body.flashlight #watch {
 .markets {
   color: #fc5c65;
 }
+
+#place-desc {
+  padding: 0.5em;
+}
+
+#place-desc .rating {
+  background: #07b9f3;
+  padding: 0.2em;
+  border-radius: .4em;
+  display: inline-block;
+}
+
+#place-desc p {
+  margin: 0 0 0.2em;
+}
+
+#place-desc .actions {
+  margin-top: auto;
+  display: flex;
+}
+
+#place-desc .actions button {
+  background: white;
+  color: #212121;
+  border: 0;
+  padding: 0.5em;
+  border-radius: 0.3em;
+  cursor: pointer;
+}
+
+#place-desc .actions button:last-of-type {
+  margin-left: auto
+}
