--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -162,6 +162,58 @@ body.flashlight #watch {
   background: #2980b9;
   /* border-bottom-right-radius: 0.1em; */
 }
+.expense {
+  display: flex;
+  align-items: center;
+  padding: 0.5em;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+  cursor: pointer;
+  margin-top: 0.2em;
+  overflow: auto;
+}
+
+.expense > div:first-of-type {
+  margin-right: 0.5em;
+}
+
+.budget-normal {
+  color: green;
+}
+
+.budget-excess {
+  color: red;
+}
+.expense > div:first-of-type i {
+  font-size: 1em;
+}
+
+.expense img {
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.expense p {
+  margin: 0;
+}
+
+.expense .end-budget {
+  margin-right: 5em;
+}
+
+.expense > div:last-of-type p:first-of-type {
+  font-size: 1.2em;
+}
+
+.expense > div:last-of-type p:last-of-type {
+  font-size: 0.8em;
+  margin-top: 0.2em;
+}
+
+#create-budget .actions {
+  text-align: center;
+}
 
 .item {
   display: flex;
@@ -188,6 +240,10 @@ body.flashlight #watch {
 
 .item p {
   margin: 0;
+}
+
+.item t {
+  color: green;
 }
 
 .item > div:last-of-type p:first-of-type {
