--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -1,5 +1,7 @@
 :root {
-  --watch-background: black; --watch-color: #2980b9; }
+  --watch-background: black;
+  --watch-color: #2980b9;
+}
 
 * {
   box-sizing: border-box;
@@ -29,7 +31,8 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* overflow: hidden; */
+    /* overflow: hidden;
+     */;
 }
 
 #watch {
@@ -153,18 +156,21 @@ body.flashlight #watch {
 
 #mainmenu ul li:nth-child(4) {
   background: #f1c40f;
-  /* border-bottom-left-radius: 0.1em; */
+    /* border-bottom-left-radius: 0.1em;
+     */;
 }
 
 #mainmenu ul li:nth-child(5) {
   background: #ecf0f1;
   color: #212121;
-  /* border-bottom-right-radius: 0.1em; */
+    /* border-bottom-right-radius: 0.1em;
+     */;
 }
 
 #mainmenu ul li:nth-child(6) {
   background: #2980b9;
-  /* border-bottom-right-radius: 0.1em; */
+    /* border-bottom-right-radius: 0.1em;
+     */;
 }
 
 .expense {
@@ -276,7 +282,7 @@ body.flashlight #watch {
 }
 
 .category p {
-  margin: 0
+  margin: 0;
 }
 
 .recommended {
@@ -303,7 +309,7 @@ body.flashlight #watch {
   color: #fc5c65;
 }
 
-#create-expense, #create-budget, #place-desc, #budget-desc {
+#faq, #create-expense, #create-budget, #place-desc, #budget-desc {
   padding: 0.5em;
 }
 
@@ -333,7 +339,7 @@ body.flashlight #watch {
 }
 
 #place-desc .actions button:last-of-type {
-  margin-left: auto
+  margin-left: auto;
 }
 
 #keyboard {
@@ -457,8 +463,7 @@ button:active {
   height: 1em;
 }
 
-#budget-bar,
-#budget-bar div  {
+#budget-bar, #budget-bar div {
   border-radius: 0.5em;
 }
 
@@ -476,15 +481,13 @@ button:active {
   width: 100% !important;
 }
 
-#budget-bar #budget-max,
-#budget-bar #budget-spent {
+#budget-bar #budget-max, #budget-bar #budget-spent {
   position: absolute;
   font-size: 0.78em;
   top: 0.1em;
 }
 
-#budget-bar #budget-max::after,
-#budget-bar #budget-spent::after {
+#budget-bar #budget-max::after, #budget-bar #budget-spent::after {
   content: " €";
 }
 
@@ -555,7 +558,21 @@ button:active {
   right: 1em;
 }
 
-
 #contacless img {
   width: 2em;
+}
+
+#screen-space::-webkit-scrollbar {
+  width: 5px;
+  border-bottom: 10px;
+}
+
+#screen-space::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 8px;
+}
+
+#screen-space::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
 }
