--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -402,6 +402,18 @@ input[type="text"], input[type="number"] {
   cursor: pointer;
 }
 
+input[type=time] {
+  width: 50%;
+  background: white;
+  margin: auto;
+  color: #212121;
+  border: 0;
+  padding: 0.5em;
+  border-radius: 0.3em;
+  cursor: pointer;
+  align-self:center;
+}
+
 button {
   background: white;
   color: #212121;
