refactor: js standard
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -309,7 +309,7 @@ body.flashlight #watch {
   color: #fc5c65;
 }
 
-#faq, #create-expense, #create-budget, #place-desc, #budget-desc {
+#restaurant-booking, #faq, #create-expense, #create-budget, #place-desc, #budget-desc {
   padding: 0.5em;
 }
 
