--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -653,3 +653,14 @@ button:active {
   background: rgba(255, 255, 255, 0.5);
   border-radius: 8px;
 }
+
+#places-list > p {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  text-align: center;
+  margin: 0;
+  color: rgba(255, 255, 255, 0.8);
+}
