--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -314,14 +314,15 @@ body.flashlight #watch {
 }
 
 #place-desc .rating {
-  background: #07b9f3;
-  padding: 0.2em;
+  color: #f1c40f;
+  padding: 0;
   border-radius: .4em;
   display: inline-block;
+  font-size: 0.8em;
 }
 
 #place-desc p {
-  margin: 0 0 0.2em;
+  margin: 0;
 }
 
 #place-desc .actions {
@@ -391,6 +392,7 @@ body.flashlight #watch {
   margin-top: 0;
 }
 
+.gps-search,
 input[type="text"], input[type="number"] {
   width: 100%;
   background: white;
@@ -570,28 +572,22 @@ button:active {
   background-size: 100% 100%;
 }
 
+#gps-path,
+#gps {
+  padding: 0.5em;
+}
+
 .gps-search {
+  margin: 0;
   display: flex;
-  color: #212121;
-  background: white;
-  border: 1px solid grey;
-  border-radius: 1em;
-  padding: 0.3em;
-  margin: 0 0.3em;
+  align-items: center;
+  box-shadow: 0px 0px 4px #0000006e;
 }
 
 .gps-search input {
   padding: 0em;
-  padding-left: 0.3em;
   border-radius: 0em;
-}
-
-.gps-search span {
-  position: absolute;
-  top: 7px;
-  right: 15px;
-  margin: 0.3em;
-  cursor: pointer;
+  margin: 0 0.5em 0 0;
 }
 
 .gps-search input:focus {
@@ -604,6 +600,7 @@ button:active {
   left: 8.97em;
   color: #0AC92B;
   -webkit-text-stroke: 1px #000;
+  z-index: 1;
 }
 
 .destination {
@@ -622,7 +619,9 @@ button:active {
   border: none;
   color: white;
   border-radius: 50%;
-  width: 20%;
+  width: 2em;
+  height: 2em;
+  box-shadow: 0px 0px 4px #0000006e;
 }
 
 #contacless {
@@ -663,4 +662,10 @@ button:active {
   text-align: center;
   margin: 0;
   color: rgba(255, 255, 255, 0.8);
+}
+
+#place-desc > div:first-of-type {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
