--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -634,15 +634,30 @@ button:active {
 
 #start-route-button {
   position: absolute;
-  bottom: 0em;
-  right: 0.5em;
-  background-color: #4C4CFF;
+  left: 25%;
+  bottom: 5px;
+  align-self: center;
+  background-color: #3498db;
   border: none;
   color: white;
-  border-radius: 50%;
-  width: 2em;
+  width: 6em;
   height: 2em;
   box-shadow: 0px 0px 4px #0000006e;
+  opacity: 50%;
+}
+
+#end-route-button {
+  position: absolute;
+  left: 25%;
+  bottom: 5px;
+  align-self: center;
+  background-color: #3498db;
+  border: none;
+  color: white;
+  width: 6em;
+  height: 2em;
+  box-shadow: 0px 0px 4px #0000006e;
+  opacity: 50%;
 }
 
 #contacless {
