feat: separate guide from places
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -309,11 +309,11 @@ body.flashlight #watch {
 }
 
 .parks {
-  color: #2ecc71;
+  color: #A3CB38;
 }
 
 .monuments {
-  color: #ffeaa7;
+  color: #ffdd59;
 }
 
 .markets {
