--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -47,6 +47,7 @@ body {
   display: flex;
   flex-direction: column;
   transition: 0.5s ease all;
+  overflow: hidden;
 }
 
 body.flashlight {
@@ -296,6 +297,7 @@ body.flashlight #watch {
 .green {
   color: green;
 }
+
 .reservations {
   color: rgb(255, 255, 255);
 }
@@ -321,7 +323,7 @@ body.flashlight #watch {
 }
 
 #person-info,
-#restaurant-booking, #faq, #create-expense, #create-budget, #place-desc, #budget-desc {
+#place-booking, #faq, #create-expense, #create-budget, #place-desc, #budget-desc {
   padding: 0.5em;
 }
 
@@ -359,24 +361,33 @@ body.flashlight #watch {
   background: rgba(19, 15, 64, 0.9);
   text-align: center;
   position: absolute;
-  bottom: 0.2em;
-  left: 0.2em;
-  width: calc(100% - 0.4em);
+  bottom: 0;
+  left: 0;
+  width: 100%;
   color: white;
   border-bottom-left-radius: 1em;
   border-bottom-right-radius: 1em;
   transition: 0.2s ease transform;
   transform: translate(0, calc(100% + 0.4em));
-  display: none;
+  z-index: 999999;
 }
 
-#keyboard.visible {
-  transform: translate(0);
+#keyboard.active {
+  transform: translate(0, 0);
+}
+
+#keyboard input {
+  margin: 0.5em 0.4em 0;
+  padding: 0;
+  border-radius: 0.2em;
+  width: calc(100% - 0.8em);
+  padding: 0.4em;
 }
 
 #keyboard table {
   width: 100%;
   border-spacing: 0.4em;
+  padding-bottom: .1em;
 }
 
 #keyboard td {
@@ -620,7 +631,7 @@ button:active {
   z-index: 1;
 }
 
-#gpsGo {
+#gps-route {
   background-image: url(../assets/maps/1.png);
   background-size: 100% 100%;
 }
@@ -690,7 +701,7 @@ button:active {
   border-radius: 8px;
 }
 
-#places-list > p {
+#places-list .empty-content > p {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -756,17 +767,17 @@ button:active {
   width: 2rem;
 }
 
-#restaurant-booking > div:first-of-type {
+#place-booking > div:first-of-type {
   display: flex;
   justify-content: space-between;
 }
 
-#restaurant-booking > div:first-of-type > input {
+#place-booking > div:first-of-type > input {
   margin-bottom: 0;
   width: 38%;
 }
 
-#restaurant-booking > div:first-of-type > input:first-of-type {
+#place-booking > div:first-of-type > input:first-of-type {
   width: 58%;
 }
 
@@ -797,7 +808,17 @@ button:active {
   display: flex;
 }
 
-.gps-results {margin: 0.5em 0 0;padding: 0;list-style: none;background: white;color: black;border-radius: 0.3em;box-shadow: 0px 0px 4px #0000006e;height: 5.7em;overflow: auto;}
+.gps-results {
+  margin: 0.5em 0 0;
+  padding: 0;
+  list-style: none;
+  background: white;
+  color: black;
+  border-radius: 0.3em;
+  box-shadow: 0px 0px 4px #0000006e;
+  height: 5.7em;
+  overflow: auto;
+}
 
 .gps-results li {
   padding: 0.5em;
@@ -806,7 +827,7 @@ button:active {
 }
 
 .gps-results li:hover {
-  background: rgba(0, 0, 0, 0.05)
+  background: rgba(0, 0, 0, 0.05);
 }
 
 #person-info > div {
