--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -357,7 +357,7 @@ body.flashlight #watch {
   margin-left: auto;
 }
 
-#keyboard {
+.keyboard {
   background: rgba(19, 15, 64, 0.9);
   text-align: center;
   position: absolute;
@@ -372,11 +372,11 @@ body.flashlight #watch {
   z-index: 999999;
 }
 
-#keyboard.active {
+.keyboard.active {
   transform: translate(0, 0);
 }
 
-#keyboard input {
+.keyboard .result {
   margin: 0.5em 0.4em 0;
   padding: 0;
   border-radius: 0.2em;
@@ -384,13 +384,13 @@ body.flashlight #watch {
   padding: 0.4em;
 }
 
-#keyboard table {
+.keyboard table {
   width: 100%;
   border-spacing: 0.4em;
   padding-bottom: .1em;
 }
 
-#keyboard td {
+.keyboard td {
   padding: 0.3em;
   background: #34495e;
   transition: 0.2s ease background;
@@ -400,7 +400,7 @@ body.flashlight #watch {
   width: 33%;
 }
 
-#keyboard td:active {
+.keyboard td:active {
   background: #293a4a;
 }
 
