--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -571,13 +571,15 @@ button:active {
 #overlay {
   position: absolute;
   background: rgba(0, 0, 0, 0.7);
-  pointer-events: none;
   z-index: 1000;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
   display: none;
 }
 
-.picker,
-#overlay {
+.picker {
   height: calc(100% - 0.4em);
   bottom: 0.2em;
   left: 0.2em;
